--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,118 +1,213 @@
 
-body {
-  background: #ffffff;
-  font-family: 'Work Sans', sans-serif;
-  font-style: normal;
-  font-weight: 300;
-  overflow-x: hidden;
+/*---------------------------------------
+  Page complète             
+-----------------------------------------*/
+
+*{
+  box-sizing: border-box; 
+  width: 1200;
+  height: 2400;
+  background-color: #EFEEEA;
 }
 
 /*---------------------------------------
   Main Navigation             
 -----------------------------------------*/
-
-.navbar-default {
-  background: #ffffff;
-  padding: 18px 0;
-  border: none;
-  margin-top: 62px;
+header {
+  margin: 25px auto 31px auto;
 }
 
-.navbar-default .navbar-collapse, .navbar-default .navbar-form {
-border-color: transparent;
+#logo{
+  position: absolute;
+  margin-top: -50px;
+  margin-left: 50px;
+
+}
+header nav ul {
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  
 }
 
-.navbar-default .navbar-brand {
-padding-top: 6px;
+  /* menu nav : stylisation -- couleur de la police vérifiée avec PSD*/
+  header nav ul li {
+    list-style-type: none;
 }
 
-.navbar-default .navbar-brand .fa {
-color: #000;
-font-size: 42px;
+header nav ul li a {
+    display: inline-block;
+    font-size: 10px;
+    font-weight: 500;
+    text-transform: uppercase;
+    text-decoration: none;
+    font-weight: bold;
+    color:#635756;
+    background-color: #f1f1ee;
+    padding: 10px;
 }
 
-.navbar-default .navbar-nav li a {
-  color: #777;
+header nav ul li a:hover {
+    background-color: #635756;
+    color: #f1f1ee;
+  }
+
+
+/*---------------------------------------
+   Main Japon             
+-----------------------------------------*/
+
+/*section premier bloc*/
+
+section article {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 600px;
+  width: 1000px;
+  box-shadow: 2px 2px 10px #e2e2de;
+  margin-left: auto;
+  margin-right: auto;
+  
+}
+
+.image{
+  width: 500px;
+  height: 600px;
+}
+
+#contenu {
+  width: 500px;
+  height: 600px;
+  display: flex;
+  flex-direction: column;
+  padding: 70px 30px 60px 30px;
+  background-color: #ffffff;
+}
+
+article time{
+  text-transform: uppercase;
+  position: relative;
+  top: -40px;
+  right: -265px;
+  width: 180px;
+  padding: 2px 2px 2px 2px;
+  background-color: #ffffff;
+
+}
+
+article h2{
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 26px;
+  font-weight: 700;
+  background-color: #ffffff;
+
+}
+
+article p {
   font-size: 16px;
-  letter-spacing: 1px;
-  -webkit-transition: all 0.4s ease-in-out;
-  transition: all 0.4s ease-in-out;
-  padding-right: 22px;
-  padding-left: 22px;
+  background-color: #ffffff;
+
 }
 
-.navbar-default .navbar-nav > li a:hover {
-  color: #333 !important;
+article .categorie {
+  text-transform: uppercase;
+  text-decoration: none;
+  color:#635756;
+  background-color: #f1f1ee;
+  display: flex;
+  position: relative;
+  bottom: -70px;
+  width:120px; 
+  height: 30px;
+  padding: 4px;
+
 }
 
-.navbar-default .navbar-nav > li > a:hover,
-.navbar-default .navbar-nav > li > a:focus {
-  color: #777;
-  background-color: transparent;
+.categorie:hover{
+  background-color: #635756;
+  color: #f1f1ee;
 }
 
-.navbar-default .navbar-nav li a:hover,
-.navbar-default .navbar-nav .active > a {
-  color: #333;
+  
+/* Pagination */
+
+.pagination {
+  text-align: center;
 }
 
-.navbar-default .navbar-nav > .active > a,
-.navbar-default .navbar-nav > .active > a:hover,
-.navbar-default .navbar-nav > .active > a:focus {
-  color: #333;
-  background-color: transparent;
+.pagination a {
+  font-size: 16px;
+  text-transform: uppercase;
+  text-decoration: none;
+  background-color: #a59d9b;
+  color: #f4f4f3;
+  padding: 10px;
 }
 
-.navbar-default .navbar-toggle {
-   border: none;
-   padding-top: 10px;
+.pagination a:hover {
+  display: inline-block;
+  background-color: #5a4a4a;
+  color:#f4f4f3 ;
+  font-size: 16px;
 }
 
-.navbar-default .navbar-toggle .icon-bar {
-  background: #bdc3c7;
-  border-color: transparent;
-}
+/* Ligne de séparation */
 
-.navbar-default .navbar-toggle:hover,
-.navbar-default .navbar-toggle:focus { 
-background-color: transparent;
+hr {
+  margin-top: 50px;
+  width: 1000px;
 }
 
 /*---------------------------------------
-   About section              
+  Footer Japon             
 -----------------------------------------*/
-
-#about .text-center {
-  padding-bottom: 42px;
+#BasDePage{
+  width: 1000px;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  
 }
 
-#about .col-md-8 {
-  padding-left: 0px;
+.infosAgence {
+  height: 70px;
+}
+.copyright{
+  width: 500px;
+  color: #594a4a;
+  font-weight: bold;
+  margin-top: -10px;
+
+}
+.nomAgence {
+  margin-left:110px;
+  color: #594a4a;
 }
 
-#about .col-md-8 img {
-  padding-right: 22px;
-  padding-bottom: 22px;
+.pageslegales {
+  width: 500px
+}
+footer ul {
+  display: flex;
+  justify-content: space-between;
+  margin-top: -59px;
 }
 
-#about hr {
-  width: 100px;
-  margin-top: 42px;
-  margin-bottom: 42px;
+footer ul li {
+  list-style-type: none;
 }
 
-#about ul {
-  padding-left: 22px;
-}
-
-#about ul li {
-  color: #777;
+footer ul li a {
+  display: inline-block;
   font-size: 16px;
-  font-weight: 400;
-  padding-top: 2px;
-  padding-bottom: 2px;
+  text-decoration: none;
+  word-spacing: 4px;
+  padding: 10px;
+  color:#827876;
+
 }
-
-
-
-
