--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,7 +2,6 @@
 /*---------------------------------------
   Page complète             
 -----------------------------------------*/
-
 *{
   box-sizing: border-box; 
   width: 1200;
@@ -11,7 +10,7 @@
 }
 
 /*---------------------------------------
-  Main Navigation             
+  Navigation             
 -----------------------------------------*/
 header {
   margin: 25px auto 31px auto;
@@ -24,20 +23,19 @@ header {
 
 }
 header nav ul {
-  justify-content: center;
   display: flex;
+  justify-content: center;
   align-items: center;
   
 }
 
-  /* menu nav : stylisation -- couleur de la police vérifiée avec PSD*/
   header nav ul li {
     list-style-type: none;
 }
 
 header nav ul li a {
     display: inline-block;
-    font-size: 10px;
+    font-size: 15px;
     font-weight: 500;
     text-transform: uppercase;
     text-decoration: none;
@@ -57,7 +55,6 @@ header nav ul li a:hover {
    Main Japon             
 -----------------------------------------*/
 
-/*section premier bloc*/
 
 section article {
   display: flex;
@@ -79,6 +76,7 @@ section article {
 #contenu {
   width: 500px;
   height: 600px;
+  color:#635756;
   display: flex;
   flex-direction: column;
   padding: 70px 30px 60px 30px;
@@ -87,11 +85,12 @@ section article {
 
 article time{
   text-transform: uppercase;
+  color:#635756;
   position: relative;
   top: -40px;
   right: -265px;
   width: 180px;
-  padding: 2px 2px 2px 2px;
+  padding: 3px 3px 3px 3px;
   background-color: #ffffff;
 
 }
@@ -153,7 +152,9 @@ article .categorie {
   font-size: 16px;
 }
 
-/* Ligne de séparation */
+/*---------------------------------------
+  Ligne de séparation             
+-----------------------------------------*/
 
 hr {
   margin-top: 50px;
@@ -174,7 +175,7 @@ hr {
   
 }
 
-.infosAgence {
+.infosChukAgence {
   height: 70px;
 }
 .copyright{
